Add RMPP color selection on RM1 and RM2

--- a/0.0.11-pre2/zz_rmhacks.qmd
+++ b/0.0.11-pre2/zz_rmhacks.qmd
@@ -18,6 +18,7 @@ LOAD rmHacks/force_refresh_gesture_hack.qmd
 LOAD rmHacks/bookmarks.qmd
 LOAD rmHacks/last_document_gesture_hack.qmd
 LOAD rmHacks/more_stroke_sizes_hack.qmd
+LOAD rmHacks/more_colors_hack.qmd
 LOAD rmHacks/document_battery_wifi_hack.qmd
 LOAD rmHacks/share_tool_toggle_wifi_hack.qmd
 LOAD rmHacks/share_tool_toggle_all_gestures_hack.qmd
