--- a/0.0.11-pre2/rmHacks/more_colors_hack.qmd
+++ b/0.0.11-pre2/rmHacks/more_colors_hack.qmd
@@ -1,12 +1,12 @@
 SLOT rmhConfigProperties
     INSERT {
-        property bool rmhEnableMoreColorsHack: ~&6504329801&~
+        property bool rmhMoreColorsHack: ~&6504329801&~
     }
 END SLOT
 
 SLOT rmhConfigAliases
     INSERT {
-        property alias rmhEnableMoreColorsHack: ~&7083272960857&~.rmhEnableMoreColorsHack
+        property alias rmhMoreColorsHack: ~&7083272960857&~.rmhMoreColorsHack
     }
 END SLOT
 
@@ -15,8 +15,8 @@ SLOT rmhSettingsToolbarModel
         {
            ~&214632764553&~: "More colors",
            ~&478136262235079021&~: "Enable all the colors from the reMarkable Paper Pro on the reMarkable 1 or 2",
-           ~&233723734822480&~: ~&7082020628281&~.rmhEnableMoreColorsHack,
-           ~&7082453764199&~: () => { ~&7082020628281&~.rmhEnableMoreColorsHack = !~&7082020628281&~.rmhEnableMoreColorsHack },
+           ~&233723734822480&~: ~&7082020628281&~.rmhMoreColorsHack,
+           ~&7082453764199&~: () => { ~&7082020628281&~.rmhMoreColorsHack = !~&7082020628281&~.rmhMoreColorsHack },
         },
     }
 END SLOT
@@ -26,7 +26,7 @@ IMPORT [[7082546018834]] 1.0
 	TRAVERSE [[454089850271038938]]#[[6504254477]] > [[7708106203292350108]]
 		REPLACE [[14419969282314418184]] WITH 
 			{
-			~&14419969282314418184&~: !(~&8397887615021556741&~.~&8399372782522826843&~ === ~&8397887615021556741&~.RM110 || ~&8397887615021556741&~.~&8399372782522826843&~ === ~&8397887615021556741&~.~&214601156697&~) || ~&7082020628281&~.rmhEnableMoreColorsHack 
+			~&14419969282314418184&~: !(~&8397887615021556741&~.~&8399372782522826843&~ === ~&8397887615021556741&~.RM110 || ~&8397887615021556741&~.~&8399372782522826843&~ === ~&8397887615021556741&~.~&214601156697&~) || ~&7082020628281&~.rmhMoreColorsHack 
 			}
 	END TRAVERSE
 END AFFECT
