--- a/0.0.11-pre3/rmHacks/more_stroke_sizes_hack.qmd
+++ b/0.0.11-pre3/rmHacks/more_stroke_sizes_hack.qmd
@@ -72,6 +72,9 @@ AFFECT [[2857280009207495592]]
         REPLACE [[8168341223615502881]] WITH {
             signal ~&8168341223615502881&~(~&254549061334391125&~ : ~&197102514&~)
         }
+        REPLACE [[17828282154459912672]] WITH {
+            signal ~&17828282154459912672&~(~&254549061334391125&~ : ~&197102514&~)
+        }
     END TRAVERSE
 END AFFECT
 
@@ -91,6 +94,23 @@ AFFECT [[2850686855228789517]]
                     ~&233748328658231&~: moreStrokeSizes ? ~&7082020628281&~.rmhMoreStrokeSizesHack : ~&6504329801&~
                 }
             END TRAVERSE
+        END TRAVERSE
+    END TRAVERSE
+END AFFECT
+
+AFFECT [[16299311781608736620]]
+    IMPORT [[7082546018834]] 1.0
+    TRAVERSE [[454089850271038938]]
+        REPLACE [[17828282154459912672]] WITH {
+            signal ~&17828282154459912672&~(~&254549061334391125&~ : ~&197102514&~)
+        }
+        TRAVERSE [[14125623155555875541]]:[[6144132522167405889]] > [[5863306775830923820]] > [[7712155293725601]][.[[214634455770]]=[[8564000837190609446]]] > [[5863306775830997749]]
+            REPLACE [[254549061334391125]] WITH { required property ~&197102514&~ ~&254549061334391125&~ }
+            LOCATE AFTER ALL
+            INSERT {
+                required property ~&197102514&~ moreStrokeSizes
+                ~&233748328658231&~: moreStrokeSizes ? ~&7082020628281&~.rmhMoreStrokeSizesHack : ~&6504329801&~
+            }
         END TRAVERSE
     END TRAVERSE
 END AFFECT
