--- a/0.0.11-pre3/zz_rmhacks.qmd
+++ b/0.0.11-pre3/zz_rmhacks.qmd
@@ -34,3 +34,4 @@ LOAD rmHacks/navigator_compressed_list_hack.qmd
 LOAD rmHacks/split_doc/split_doc_main.qmd
 LOAD rmHacks/table_of_contents_button_hack.qmd
 LOAD rmHacks/hide_close_button_hack.qmd
+load rmHacks/floating.qmd
