Fix LOAD, and add a checkmark for the menu

--- a/0.0.11-pre3/rmHacks/floating.qmd
+++ b/0.0.11-pre3/rmHacks/floating.qmd
@@ -78,6 +78,7 @@ AFFECT [[2857280009207495592]]
 			signal resetFloatBarPosition
 			signal presetSave
 			signal toggleFloatQuick
+			property bool floatbarQuick:~&6504329801&~
 		}
 		TRAVERSE [[6502786168]] > [[8398044571386570029]]
         LOCATE BEFORE [[7712155293725601]][.[[214634455770]]=`toolbarProvider.secondaryTools`]
@@ -110,7 +111,18 @@ AFFECT [[2857280009207495592]]
 							~&15640708674084664669&~: ~&6504254477&~.~&15640708674084664669&~
 							~&8400129127120172259&~: ~&6504329801&~
 							~&7081629735527&~.~&254529418434902000&~: ~&6504329801&~
-							~&254542236275632405&~: ~&6504254477&~.toggleFloatQuick()
+							~&254542236275632405&~: {floatToggle.~&7083211098251&~(); 
+							}
+							
+							~&425121728314878811&~.~&7081958765675&~ {
+								~&5972374&~: floatToggle
+								~&233721384511543&~.~&499747351624466981&~: 20
+								~&233721384511543&~.~&214640173127&~: ~&7083038346995&~.~&214640173127&~
+								~&233721384511543&~.~&3441383163516681764&~: ~&7083038346995&~.~&3441383163516681764&~
+								~&233723734822480&~: !~&6504254477&~.floatbarQuick
+								~&17047203121389332983&~: {
+								~&6504254477&~.toggleFloatQuick();}
+							}
 						}
 						~&425121728314878811&~.~&432643201877711221&~ {
 							~&5972374&~: quickPresetSave
@@ -269,7 +281,6 @@ AFFECT [[2328484894988065446]]
                 }
 				
 				function onResetPosition(){
-					~&233724020023100&~.~&197092075&~("MORE RESET");
 					floatQuick.moveToPosition((~&7083038346995&~.~&214646099849&~-floatQuick.~&214646099849&~)/2,0);
 				}
             }
@@ -280,7 +291,6 @@ AFFECT [[2328484894988065446]]
                 }
 				
 				function onResetPosition(){
-					~&233724020023100&~.~&197092075&~("MORE RESET");
 					floatQuick.moveToPosition((~&7083038346995&~.~&214646099849&~-floatQuick.~&214646099849&~)/2,0);
 				}
             }
@@ -288,7 +298,9 @@ AFFECT [[2328484894988065446]]
             ~&425121728314878811&~.~&16765000136167945189&~ {
                 property ~&197102514&~ currentDocumentView: mainDocumentSelected ? ~&15793094956877902211&~.~&6503936152&~ : rmhDocumentViewSplit.~&6503936152&~
                 property ~&197102514&~ currentToolbar: mainDocumentSelected ? mainToolbar.~&6503936152&~ : altToolbar.~&6503936152&~
-                ~&5972374&~: floatQuick
+                
+				
+				~&5972374&~: floatQuick
                 ~&233748328658231&~: floatQuick.currentDocumentView.floatToolsEnabled && ~&15793094956877902211&~.~&6503936152&~ && ~&533861137338760383&~
                 ~&214641137009&~: 1
                 ~&504576868586410052&~: ~&214625660372&~
@@ -332,7 +344,7 @@ AFFECT [[2328484894988065446]]
 					~&7083121450889&~ ~&6504329801&~;
 				}
 				function saveQuickToolFile() {
-					~&197091758&~ xhr =                        new                       XMLHttpRequest();
+					~&197091758&~ xhr =                         new                        XMLHttpRequest();
 					~&197091758&~ ~&6503736259&~ = {
 						quickTool: quickTool,
 						isfloatQuickActive: ~&6504254477&~.floatbarQuick,
@@ -352,7 +364,7 @@ AFFECT [[2328484894988065446]]
 					xhr.~&6504279475&~(dataStr);
 				}
 				function loadQuickToolFile() {
-					~&197091758&~ xhr =                                                          new                                                          XMLHttpRequest();
+					~&197091758&~ xhr =                                                           new                                                           XMLHttpRequest();
 
 					xhr.~&6504147419&~("GET", "file:///home/root/quickTool.json");
 					
@@ -385,8 +397,7 @@ AFFECT [[2328484894988065446]]
 					~&5972374&~: floatQuickHandleParent
 					~&481641799955318521&~: ~&5971598&~.~&233696851602406&~
 					~&6504337259&~: floatQuick.~&6504337259&~
-					~&8399601734642709923&~: !~&6504254477&~.floatbarQuick ? ~&"551690684902850748&~ : ~&"4663243347623906140&~
-					~&7713561545874130&~: floatQuick.currentDocumentView === rmhDocumentViewSplit.~&6503936152&~
+					~&8399601734642709923&~: gFloatToolsEnabled ? ~&"551690684902850748&~ : ~&"4663243347623906140&~
 					~&254494525842443467&~ {
 						~&5972374&~: floatQuickHandle
 						~&233721384511543&~.~&6503816592&~: ~&7083038346995&~
@@ -398,8 +409,10 @@ AFFECT [[2328484894988065446]]
 						
 						}
 						property ~&197088788&~ ~&11181025814035365320&~: 30
-						~&383135108587212173&~: () => { ~&6504254477&~.floatbarQuick = !~&6504254477&~.floatbarQuick;}  
-						~&8399894427451672267&~: () => { ~&6504254477&~.timeOutBeforeMovingTools=~&214625660372&~;}
+						~&383135108587212173&~: () => { 
+						~&6504254477&~.floatbarQuick = !~&6504254477&~.floatbarQuick;}  
+						~&8399894427451672267&~: () => { 
+						~&6504254477&~.timeOutBeforeMovingTools=~&214625660372&~;}
 						~&12756630929064311461&~: {
 							~&5972376&~ (~&6503754151&~.~&7082453764421&~) {
 								~&197102514&~ centerX = floatQuick.~&180993&~ + floatQuick.~&214646099849&~ / 2
@@ -653,7 +666,7 @@ AFFECT [[2328484894988065446]]
 				
 				~&425121728314878811&~.~&16765000136167945189&~.~&7081261925573&~ {
 					~&5972374&~: floatquickMoveLeft
-					~&233748328658231&~: floatQuick.currentToolbar.~&7712989577739634&~ && floatQuick.moveTool
+					~&233748328658231&~: floatQuick.currentToolbar.floatbarQuick && floatQuick.currentToolbar.~&7712989577739634&~ && floatQuick.moveTool
 					~&254501108490678590&~ {
 							~&233721384511543&~.~&6503816592&~: ~&7083038346995&~
 							~&214622605608&~: ~&"214646069354&~
@@ -676,7 +689,7 @@ AFFECT [[2328484894988065446]]
 				}
 				~&425121728314878811&~.~&16765000136167945189&~.~&7081261925573&~ {
 					~&5972374&~: floatquickMoveRight
-					~&233748328658231&~: floatQuick.currentToolbar.~&7712989577739634&~ && floatQuick.moveTool
+					~&233748328658231&~: floatQuick.currentToolbar.floatbarQuick && floatQuick.currentToolbar.~&7712989577739634&~ && floatQuick.moveTool
 					~&254501108490678590&~ {
 							~&233721384511543&~.~&6503816592&~: ~&7083038346995&~
 							~&214622605608&~: ~&"214646069354&~
