--- a/0.0.11-pre4/zz_rmhacks.qmd
+++ b/0.0.11-pre4/zz_rmhacks.qmd
@@ -7,7 +7,7 @@ LOAD rmHacks/base/document_toggles_hack.qmd
 LOAD rmHacks/base/toolbar_compat.qmd
 
 LOAD rmHacks/document_clock_hack.qmd
-;   LOAD rmHacks/toolbar_pages_button_hack.qmd
+LOAD rmHacks/toolbar_pages_button_hack.qmd
 ;   LOAD rmHacks/new_notebook_date_name_hack.qmd
 ;   LOAD rmHacks/alphabetize_tags_list_hack.qmd
 ;   LOAD rmHacks/document_pages_hide_hack.qmd
