--- a/0.0.11-pre4/zz_rmhacks.qmd
+++ b/0.0.11-pre4/zz_rmhacks.qmd
@@ -10,7 +10,7 @@ LOAD rmHacks/document_clock_hack.qmd
 LOAD rmHacks/toolbar_pages_button_hack.qmd
 LOAD rmHacks/new_notebook_date_name_hack.qmd
 LOAD rmHacks/alphabetize_tags_list_hack.qmd
-;   LOAD rmHacks/document_pages_hide_hack.qmd
+LOAD rmHacks/document_pages_hide_hack.qmd
 ;   LOAD rmHacks/toggle_toolbar_gesture_hack.qmd
 ;   LOAD rmHacks/switch_pens_gesture_hack.qmd
 ;   LOAD rmHacks/toggle_eraser_gesture_hack.qmd
