Port toggle_toolbar_gesture_hack to 3.24

--- a/0.0.11-pre4/zz_rmhacks.qmd
+++ b/0.0.11-pre4/zz_rmhacks.qmd
@@ -11,7 +11,7 @@ LOAD rmHacks/toolbar_pages_button_hack.qmd
 LOAD rmHacks/new_notebook_date_name_hack.qmd
 LOAD rmHacks/alphabetize_tags_list_hack.qmd
 LOAD rmHacks/document_pages_hide_hack.qmd
-;   LOAD rmHacks/toggle_toolbar_gesture_hack.qmd
+LOAD rmHacks/toggle_toolbar_gesture_hack.qmd
 ;   LOAD rmHacks/switch_pens_gesture_hack.qmd
 ;   LOAD rmHacks/toggle_eraser_gesture_hack.qmd
 ;   LOAD rmHacks/force_refresh_gesture_hack.qmd
