--- a/0.0.11-pre4/rmHacks/toggle_eraser_gesture_hack.qmd
+++ b/0.0.11-pre4/rmHacks/toggle_eraser_gesture_hack.qmd
@@ -27,8 +27,8 @@ AFFECT [[17298303916558156758]]
         LOCATE BEFORE [[8545339034058226003]]#[[16007489649639374748]]
         INSERT {
             ~&8545339034058226003&~ {
-                ~&5972374&~: rmhSwitchEraser
-                ~&8399878573055752961&~: "rmh-switch-eraser"
+                ~&5972374&~: rmhToggleEraser
+                ~&8399878573055752961&~: "rmh-toggle-eraser"
                 ~&254526613107157226&~: ~&5971598&~.~&214638019283&~(0, -1)
                 ~&7712927726759444&~: 1.0 * ~&254549375155946341&~.~&496707965879903317&~
                 ~&6503646466&~: ~&7082020628281&~.~&800940498672108403&~
@@ -37,7 +37,7 @@ AFFECT [[17298303916558156758]]
                 ~&13245387760250501547&~: ~&6504329801&~
                 ~&233726547792244&~: ~&7082020628281&~.rmhAllGesturesToggle && ~&7082020628281&~.rmhToggleEraserGestureHack && !~&254549375155946341&~.~&16735792760298061570&~
                 ~&233727659172727&~: 1
-                ~&495358363329399331&~: ~&6504391364&~.rmhSwitchEraser()
+                ~&495358363329399331&~: ~&6504391364&~.rmhToggleEraser()
             }
         }
     END TRAVERSE
@@ -46,7 +46,7 @@ END AFFECT
 AFFECT [[11806562588218124596]]
     TRAVERSE [[8397993708429497603]]
         LOCATE AFTER [[7713405014271992]]
-        INSERT { signal rmhSwitchEraser }
+        INSERT { signal rmhToggleEraser }
     END TRAVERSE
 END AFFECT
 
@@ -54,8 +54,8 @@ AFFECT [[1224665461898798997]]
     TRAVERSE [[8397993708429497603]] > [[5728643844066569666]]
     LOCATE AFTER ALL
     INSERT {
-        onRmhSwitchEraser: {
-            ~&233745975898428&~.selectEraser();
+        onRmhToggleEraser: {
+            ~&233745975898428&~.toggleEraser();
         }
     }
 END AFFECT
@@ -63,11 +63,29 @@ END AFFECT
 AFFECT [[11313888899523275277]]
     TRAVERSE [[8397993708429497603]]
         LOCATE BEFORE ALL INSERT {
-            function selectEraser() {
-                ~&197091758&~ ~&214624950331&~ = _editingTools.~&7082786471789&~(3).~&6503936152&~;
-                ~&6504254477&~.~&233718999756776&~(~&214624950331&~, ~&233704648923420&~.~&8398583355955217966&~.~&14176254790786929359&~);
-                ~&6504254477&~.~&501100168435426133&~ = ~&214624950331&~;
+            property ~&6502786168&~ previousSelectedPen
+
+            function _selectPen(~&197096108&~) {
+                previousSelectedPen = ~&501100168435426133&~;
+                ~&501100168435426133&~ = ~&197096108&~;
+            }
+
+            function toggleEraser() {
+                ~&197091758&~ ~&7082627422347&~ = _editingTools.~&7082786471789&~(3).~&6503936152&~;
+                ~&197091758&~ ~&214624950331&~;
+                ~&5972376&~ (~&7082627422347&~ == ~&16536305558369217168&~) {
+                    ~&214624950331&~ = previousSelectedPen;
+                } ~&6503784146&~ {
+                    ~&214624950331&~ = ~&7082627422347&~;
+                }
+                ~&233718999756776&~(~&214624950331&~, ~&233704648923420&~.~&8398583355955217966&~.~&14176254790786929359&~);
+                _selectPen(~&214624950331&~);
             }
         }
+
+        REBUILD [[15792870570493648626]]
+            LOCATE BEFORE ALL
+            REPLACE { ~&6504254477&~.~&501100168435426133&~ = ~&233740416638826&~; } WITH { _selectPen(~&233740416638826&~); }
+        END REBUILD
     END TRAVERSE
 END AFFECT
