--- a/0.0.11-pre4/zz_rmhacks.qmd
+++ b/0.0.11-pre4/zz_rmhacks.qmd
@@ -1,5 +1,5 @@
 ;   rm-hacks-qmd v0.0.11-pre3
-VERSION [[17607111715072197239]]
+; VERSION 3.24.0.149
 
 LOAD rmHacks/base/global.qmd
 LOAD rmHacks/base/settings.qmd
@@ -18,7 +18,7 @@ LOAD rmHacks/force_refresh_gesture_hack.qmd
 LOAD rmHacks/auto_new_page_hack.qmd
 LOAD rmHacks/bookmarks.qmd
 LOAD rmHacks/last_document_gesture_hack.qmd
-;   LOAD rmHacks/more_stroke_sizes_hack.qmd
+LOAD rmHacks/more_stroke_sizes_hack.qmd
 ;   LOAD rmHacks/more_colors_hack.qmd
 ;   LOAD rmHacks/document_battery_wifi_hack.qmd
 ;   LOAD rmHacks/share_tool_toggle_wifi_hack.qmd
