Wifi half of document_battery_wifi_hack is broken
And seemingly unfixable for now.

--- a/0.0.11-pre4/rmHacks/document_battery_hack.qmd
+++ b/0.0.11-pre4/rmHacks/document_battery_hack.qmd
@@ -1,70 +1,43 @@
 SLOT rmhConfigProperties
     INSERT {
-        property ~&6503679477&~ rmhDocumentBatteryWiFiHack: ~&6504329801&~
+        property ~&6503679477&~ rmhDocumentBatteryHack: ~&6504329801&~
     }
 END SLOT
 
 SLOT rmhConfigAliases
     INSERT {
-        property ~&214620122227&~ rmhDocumentBatteryWiFiHack: ~&7083272960857&~.rmhDocumentBatteryWiFiHack
+        property ~&214620122227&~ rmhDocumentBatteryHack: ~&7083272960857&~.rmhDocumentBatteryHack
     }
 END SLOT
 
 SLOT rmhShareToolFoldoutModel
     INSERT {
         ~&425121728314878811&~.~&432643201877711221&~ {
-            ~&5972374&~: rmhToggleBatteryWiFi
+            ~&5972374&~: rmhToggleBattery
             ~&233748328658231&~: ~&6504329801&~
-            ~&214632764553&~: ~&6504222003&~("Battery/WiFi Levels")
+            ~&214632764553&~: ~&6504222003&~("Battery Levels")
             ~&8399601734642709923&~: ~&"3732286783358250461&~
             ~&15640708674084664669&~: ~&6504254477&~.~&15640708674084664669&~
             ~&8400129127120172259&~: ~&6504329801&~
-            ~&7713561545874130&~: ~&7082020628281&~.rmhDocumentBatteryWiFiHack
+            ~&7713561545874130&~: ~&7082020628281&~.rmhDocumentBatteryHack
             ~&7081629735527&~.~&254529418434902000&~: ~&6504329801&~
-            ~&254542236275632405&~: ~&7082020628281&~.rmhDocumentBatteryWiFiHack = !~&7082020628281&~.rmhDocumentBatteryWiFiHack
+            ~&254542236275632405&~: ~&7082020628281&~.rmhDocumentBatteryHack = !~&7082020628281&~.rmhDocumentBatteryHack
         }
-
     }
 END SLOT
 
 SLOT rmhSettingsToolbarModel
     INSERT {
         {
-            ~&214632764553&~: "Document battery and wifi icons",
-            ~&478136262235079021&~: "Enables a battery and a wifi icon at the bottom of the toolbar (only works with the full width toolbar)",
-            ~&233723734822480&~: ~&7082020628281&~.rmhDocumentBatteryWiFiHack,
+            ~&214632764553&~: "Document battery icon",
+            ~&478136262235079021&~: "Enables a battery at the bottom of the toolbar",
+            ~&233723734822480&~: ~&7082020628281&~.rmhDocumentBatteryHack,
             ~&7082453764199&~: () => {
-                ~&7082020628281&~.rmhDocumentBatteryWiFiHack = !~&7082020628281&~.rmhDocumentBatteryWiFiHack;
+                ~&7082020628281&~.rmhDocumentBatteryHack = !~&7082020628281&~.rmhDocumentBatteryHack;
             },
         },
     }
 END SLOT
-
-AFFECT [[1658694193319203921]]
-    TRAVERSE [[6502786168]]
-        LOCATE AFTER ALL
-        INSERT {
-            readonly property ~&7083178290016&~ wifiSignalStrengthIconSource: {
-                ~&5972376&~ (!~&458393305662414579&~.~&7713152318054570&~) {
-                    ~&7083121450889&~ ~&"8609872106315511513&~;
-                }
-
-                ~&197102514&~ sig = ~&458393305662414579&~.signalStrength;
-
-                ~&5972376&~ (sig > -50) {
-                    ~&7083121450889&~ ~&"1888152859768664529&~;
-                }
-                ~&5972376&~ (sig > -60) {
-                    ~&7083121450889&~ ~&"1888152859768664528&~;
-                }
-                ~&5972376&~ (sig > -70) {
-                    ~&7083121450889&~ ~&"1888152859768664527&~;
-                }
-                ~&7083121450889&~ ~&"1888152859768664526&~;
-            }
-        }
-    END TRAVERSE
-END AFFECT
 
 AFFECT [[11313888899523275277]]
     IMPORT [[9024234502391964376]] 1.0
@@ -75,9 +48,9 @@ AFFECT [[11313888899523275277]]
         LOCATE BEFORE [[8398044571386570029]]
         INSERT {
             ~&197063777&~ {
-                ~&5972374&~: batteryWifiIcons
+                ~&5972374&~: batteryIcons
                 ~&233744706647566&~: 3
-                ~&233748328658231&~: ~&7082020628281&~.rmhDocumentBatteryWiFiHack && ~&6504254477&~.~&7712989577739634&~
+                ~&233748328658231&~: ~&7082020628281&~.rmhDocumentBatteryHack && ~&6504254477&~.~&7712989577739634&~
 
                 LayoutMirroring.~&233726547792244&~: ~&214625660372&~
                 LayoutMirroring.childrenInherit: ~&6504329801&~
@@ -88,7 +61,7 @@ AFFECT [[11313888899523275277]]
                         ~&6504095402&~: ~&"7713689654001219&~
                         ~&6504426203&~: ~&6504254477&~.~&7713446884515614&~ === ~&8236974744924391272&~.~&7712083094340350&~.~&6502877684&~ || ~&6504254477&~.~&7713446884515614&~ === ~&8236974744924391272&~.~&7712083094340350&~.~&214602223655&~
                         ~&887939191986104807&~ {
-                            ~&7083194890448&~: batteryWifiIcons
+                            ~&7083194890448&~: batteryIcons
                             ~&233721384511543&~.~&12826966400293002612&~: ~&7083038346995&~.~&12826966400293002612&~
                             ~&233721384511543&~.~&15692798426932296956&~: ~&7082020628281&~.rmhDecreaseToolbarWidthHack ? -10 : 3
                         }
@@ -97,7 +70,7 @@ AFFECT [[11313888899523275277]]
                         ~&6504095402&~: ~&"8399572322985746835&~
                         ~&6504426203&~: !(~&6504254477&~.~&7713446884515614&~ === ~&8236974744924391272&~.~&7712083094340350&~.~&6502877684&~ || ~&6504254477&~.~&7713446884515614&~ === ~&8236974744924391272&~.~&7712083094340350&~.~&214602223655&~)
                         ~&887939191986104807&~ {
-                            ~&7083194890448&~: batteryWifiIcons
+                            ~&7083194890448&~: batteryIcons
                             ~&233721384511543&~.~&214640173127&~: ~&7083038346995&~.~&214640173127&~
                             ~&233721384511543&~.~&499747351624466981&~: 12
                             ~&233721384511543&~.~&15692798426932296956&~: ~&7082020628281&~.rmhDecreaseToolbarWidthHack ? -4 : 3
@@ -147,14 +120,6 @@ AFFECT [[11313888899523275277]]
                     ~&233721384511543&~.~&3441383163516681764&~: ~&7083038346995&~.~&3441383163516681764&~
                     ~&214646099849&~: ~&7082020628281&~.iconSizeExtraSmall * 2
                     ~&15450610953915458578&~: ~&6503165774&~.~&14019785274593562237&~
-                }
-
-                ~&425121728314878811&~.~&6502767986&~ {
-                    ~&7083172477658&~: ~&7082020628281&~.wifiSignalStrengthIconSource
-                    ~&6504284228&~: ~&7082020628281&~.iconSizeExtraSmall
-                    ~&214622605608&~: ~&7082020628281&~.~&8399340017235344933&~
-
-                    ~&233721384511543&~.~&3441383163516681764&~: ~&7083038346995&~.~&3441383163516681764&~
                 }
             }
         }
