--- a/0.0.11-pre4/rmHacks/document_battery_hack.qmd
+++ b/0.0.11-pre4/rmHacks/document_battery_hack.qmd
@@ -30,7 +30,7 @@ SLOT rmhSettingsToolbarModel
     INSERT {
         {
             ~&214632764553&~: "Document battery icon",
-            ~&478136262235079021&~: "Enables a battery at the bottom of the toolbar",
+            ~&478136262235079021&~: "Enables a battery icon at the bottom of the toolbar (only works with the full width toolbar)",
             ~&233723734822480&~: ~&7082020628281&~.rmhDocumentBatteryHack,
             ~&7082453764199&~: () => {
                 ~&7082020628281&~.rmhDocumentBatteryHack = !~&7082020628281&~.rmhDocumentBatteryHack;
