Port share_tool_settings_hack to 3.24

--- a/0.0.11-pre4/zz_rmhacks.qmd
+++ b/0.0.11-pre4/zz_rmhacks.qmd
@@ -24,7 +24,7 @@ LOAD rmHacks/document_battery_hack.qmd
 ;   LOAD rmHacks/share_tool_toggle_wifi_hack.qmd
 LOAD rmHacks/share_tool_toggle_all_gestures_hack.qmd
 LOAD rmHacks/light_sleep_icon_hack.qmd
-;   LOAD rmHacks/share_tool_settings_hack.qmd
+LOAD rmHacks/share_tool_settings_hack.qmd
 ;   LOAD rmHacks/screenshare_everywhere_hack.qmd
 ;   LOAD rmHacks/all_mono_hack.qmd
 LOAD rmHacks/toolbar_width_hack.qmd
