--- a/0.0.11-pre4/rmHacks/base/settings.qmd
+++ b/0.0.11-pre4/rmHacks/base/settings.qmd
@@ -499,12 +499,19 @@ AFFECT [[12653411498250454669]]
     END TRAVERSE
 END AFFECT
 
+AFFECT [[1658694193319203921]]
+    TRAVERSE [[6502786168]]
+        LOCATE AFTER ALL
+        INSERT { readonly property ~&197088788&~ rmHacksSettingsIx: 9999 }
+    END TRAVERSE
+END AFFECT
+
 AFFECT [[12599552112012170435]]
     TRAVERSE [[3819512207256720568]]#[[7713561876955258]]
         TRAVERSE [[7081645463424]]#[[5556919789846348618]]
             REBUILD [[16021043814775702381]]
                 LOCATE BEFORE { default }
-                INSERT { ~&6503700293&~ 9999: ~&7083121450889&~ rmhConfiguration; }
+                INSERT { ~&6503700293&~ ~&7082020628281&~.rmHacksSettingsIx: ~&7083121450889&~ rmhConfiguration; }
             END REBUILD
         END TRAVERSE
         LOCATE AFTER ALL
@@ -527,7 +534,7 @@ AFFECT [[12599552112012170435]]
                 ~&6504337259&~: ~&254477762679831355&~.~&233703109346403&~.~&233740920352621&~
                 ~&6504315758&~: ~&8400072892861785085&~ ? "rM Hacks" : ""
                 ~&8399601734642709923&~: ~&"6968812125651284998&~
-                ~&484431552542639914&~: ~&7713561876955258&~.~&17776274328933340866&~ === 9999
+                ~&484431552542639914&~: ~&7713561876955258&~.~&17776274328933340866&~ === ~&7082020628281&~.rmHacksSettingsIx
                 ~&233748328658231&~: ~&6504329801&~
                 ~&7081629735527&~.~&254529418434902000&~: ~&6504329801&~
                 /* keyboard navigation:*/
@@ -535,8 +542,8 @@ AFFECT [[12599552112012170435]]
 
                 ~&495358363329399331&~: ~&7712792149454042&~()
                 function ~&7712792149454042&~() {
-                    ~&7713561876955258&~.~&17776274328933340866&~ = 9999;
-                    ~&7713561876955258&~.~&15665743285783187873&~(9999);
+                    ~&7713561876955258&~.~&17776274328933340866&~ = ~&7082020628281&~.rmHacksSettingsIx;
+                    ~&7713561876955258&~.~&15665743285783187873&~(~&7082020628281&~.rmHacksSettingsIx);
                 }
             } 
         }
