--- a/0.0.11-pre4/zz_rmhacks.qmd
+++ b/0.0.11-pre4/zz_rmhacks.qmd
@@ -1,5 +1,5 @@
 ;   rm-hacks-qmd v0.0.11-pre3
-; VERSION 3.24.0.149
+VERSION [[17607111715072197239]]
 
 LOAD rmHacks/base/global.qmd
 LOAD rmHacks/base/settings.qmd
@@ -26,7 +26,7 @@ LOAD rmHacks/share_tool_toggle_all_gestures_hack.qmd
 LOAD rmHacks/light_sleep_icon_hack.qmd
 LOAD rmHacks/share_tool_settings_hack.qmd
 LOAD rmHacks/screenshare_everywhere_hack.qmd
-;   LOAD rmHacks/all_mono_hack.qmd
+LOAD rmHacks/all_mono_hack.qmd
 LOAD rmHacks/toolbar_width_hack.qmd
 ;   LOAD rmHacks/hide_text_tool_hack.qmd
 ;   LOAD rmHacks/navigator_compressed_list_hack.qmd
