Add support for 3.24.0.149

--- a/0.0.11-pre4/rmHacks/all_mono_hack.qmd
+++ b/0.0.11-pre4/rmHacks/all_mono_hack.qmd
@@ -22,7 +22,7 @@ SLOT rmhSettingsGeneralModel
 END SLOT
 
 AFFECT [[2328484894988065446]]
-    TRAVERSE [[8397788359424131273]] > [[2172328112067264168]]
+    TRAVERSE [[8397788359424131273]] > [[7081372714662.10578197394989910333]]
         REBUILD [[233748328658231]]
             LOCATE AFTER STREAM ? { ?
             INSERT {
