--- a/0.0.11-pre4/rmHacks/split_doc/split_doc_main.qmd
+++ b/0.0.11-pre4/rmHacks/split_doc/split_doc_main.qmd
@@ -74,7 +74,7 @@ END AFFECT
 
 AFFECT [[2328484894988065446]]
     ;   Take the split document view's globalScreenMode into account:
-    TRAVERSE [[8397788359424131273]] > [[2172328112067264168]]
+    TRAVERSE [[8397788359424131273]] > [[7081372714662.10578197394989910333]]
         REBUILD [[233748328658231]]
             LOCATE BEFORE { ~&5972376&~ (!~&15793094956877902211&~ }
             REMOVE UNTIL END
@@ -89,7 +89,7 @@ AFFECT [[2328484894988065446]]
 
     TRAVERSE [[8397788359424131273]] > [[8397993708429497603]]#[[7713531976371484]] > [[8397993708429497603]]#[[7713694313857736]]
         TRAVERSE [[254495336496498420]]#[[254540341572282132]]
-            REBUILD [[1665714865315876004]]
+            REBUILD [[254480451320573660.495334332051582499]]
                 LOCATE BEFORE STREAM / } /
                 INSERT { rmhDocumentViewSplit.~&16021043814775702381&~ = rmhDocumentViewSplitComponent; }
             END REBUILD
@@ -107,7 +107,13 @@ AFFECT [[2328484894988065446]]
                     ~&214644635174&~: mainToolbar.~&6503936152&~
                 }
             }
-            REMOVE [[5130717458105847837]]
+            REMOVE [[233721384511543.7712879746914881]]
+            REBUILD [[7713401454751279]]
+                LOCATE AFTER STREAM ?{?
+                INSERT {
+                    ~&5972376&~(mainToolbar.~&6503936152&~) rmhDocumentViewSplit.~&6503936152&~.~&233745975898428&~ = mainToolbar.~&6503936152&~;
+                }
+            END REBUILD
         END TRAVERSE
 
         LOCATE AFTER [[7081645463424]]#[[15793094956877902211]]
@@ -131,14 +137,14 @@ AFFECT [[2328484894988065446]]
                 ~&7082729686082&~: 0
 
                 ~&7713401454751279&~: () => {
-                    rmhDocumentViewSplit.~&6503936152&~.~&233745975898428&~ = mainToolbar.~&6503936152&~;
+                    ~&5972376&~(altToolbar.~&6503936152&~) rmhDocumentViewSplit.~&6503936152&~.~&233745975898428&~ = altToolbar.~&6503936152&~;
                 }
 
                 ~&233681166222244&~ {
-                    ~&6504426203&~: rmhDocumentViewSplit.~&6503936152&~ && mainToolbar.~&6503936152&~
+                    ~&6504426203&~: rmhDocumentViewSplit.~&6503936152&~ && altToolbar.~&6503936152&~
                     ~&7083194890448&~: rmhDocumentViewSplit.~&6503936152&~
                     property: ~&'233745975898428&~
-                    ~&214644635174&~: mainToolbar.~&6503936152&~
+                    ~&214644635174&~: altToolbar.~&6503936152&~
                 }
             }
         }
@@ -156,6 +162,7 @@ AFFECT [[2328484894988065446]]
                     mainDocumentViewItem: ~&15793094956877902211&~.~&6503936152&~
                     firstItemHeight: rmhDocumentViewSplit.~&6503936152&~.~&7082729686082&~
 
+                    ~&7713433736001692&~: ~&6504254477&~.~&7713433736001692&~
                     ~&14054373467553779636&~: ~&6504254477&~.~&14054373467553779636&~
                     ~&14259564207776773479&~: ~&6504254477&~.~&14259564207776773479&~
                     ~&7842066060529582499&~: ~&5751670711254023426&~
@@ -169,9 +176,10 @@ AFFECT [[2328484894988065446]]
                     ~&495572996767745525&~: ~&6504254477&~.~&495572996767745525&~
                     ~&8400072290688674154&~: ~&6504254477&~.~&8400072290688674154&~
                     ~&10509964749635331227&~: ~&6504254477&~.~&10509964749635331227&~
+                    ~&254522585318599537&~: ~&6504254477&~.~&254522585318599537&~
+                    ~&482865290967253827&~: ~&6504254477&~.~&482865290967253827&~
 
                     ~&214626153769&~: ~&6504329801&~ /* Loader is a focus scope. This translates to having focus whenever the loader does.*/
-                    ~&10476114579171410134&~: ~&6504254477&~.~&10476114579171410134&~
                     ~&11814444212400738190&~: {
                         ~&254540341572282132&~.~&8400072893140454432&~();
                     }
