--- a/0.0.11-pre4/rmHacks/toggle_eraser_gesture_hack.qmd
+++ b/0.0.11-pre4/rmHacks/toggle_eraser_gesture_hack.qmd
@@ -22,7 +22,7 @@ SLOT rmhSettingsGesturesModel
 END SLOT
 
 AFFECT [[17298303916558156758]]
-    IMPORT Qt.labs.settings 1.0
+    IMPORT Qt.labs.settings [[180922.180921]]
     TRAVERSE [[254504370080162629]]
         LOCATE BEFORE [[8545339034058226003]]#[[16007489649639374748]]
         INSERT {
@@ -60,13 +60,13 @@ AFFECT [[1224665461898798997]]
     }
 END AFFECT
 
-AFFECT [[2857280009207495592]]
+AFFECT [[11313888899523275277]]
     TRAVERSE [[8397993708429497603]]
         LOCATE BEFORE ALL INSERT {
             function selectEraser() {
                 ~&197091758&~ ~&214624950331&~ = _editingTools.itemAt(3).~&6503936152&~;
                 ~&6504254477&~.~&233718999756776&~(~&214624950331&~, ~&233704648923420&~.~&8398583355955217966&~.DontActivate);
-                ~&6504254477&~.~&16536305558369217168&~ = ~&214624950331&~;
+                ~&6504254477&~.~&501100168435426133&~ = ~&214624950331&~;
                 ~&6504254477&~.~&5107434981825242642&~(~&214624950331&~.~&197096108&~.~&6504326343&~);
             }
         }
