--- a/0.0.11-pre4/rmHacks/base/settings.qmd
+++ b/0.0.11-pre4/rmHacks/base/settings.qmd
@@ -1,10 +1,10 @@
 AFFECT [[12653411498250454669]]
-    IMPORT [[13511026984709005054]] 1.0
-    IMPORT [[8700244045043152307]] 1.0
+    IMPORT [[7082573613689.6504391364.15858002339220379479]] [[180922.180921]]
+    IMPORT [[7082573613689.6504391364.233725061010028]] [[180922.180921]]
     IMPORT [[14839606055109153994]] 2.15
-    IMPORT [[14051755590025246413]] 2.4
-    IMPORT [[18218533733987071354]] 1.0
-    IMPORT [[14976263374353557139]] 1.0
+    IMPORT [[233700934949963.7711528871884381]] [[180923.180925]]
+    IMPORT [[6504469795.6504031891.7713561876955258]] [[180922.180921]]
+    IMPORT [[6504469795.6504031891.214639382931]] [[180922.180921]]
 
     TRAVERSE [[3819512207256720568]]
         LOCATE BEFORE ALL
@@ -15,14 +15,14 @@ AFFECT [[12653411498250454669]]
             property bool ~&8399487686344347164&~: rmhConfiguration && (rmhGeneralSettingsView.~&233748328658231&~ || rmhGestureSettingsView.~&233748328658231&~ || rmhBookmarksSettingsView.~&233748328658231&~)
         }
 
-        TRAVERSE [[15218691749766925454]]
+        TRAVERSE [[425121728314878811.4184163301694413582]]
             LOCATE BEFORE ALL
             INSERT {
                 ~&233748328658231&~: !rmhConfiguration
             }
         END TRAVERSE
 
-        TRAVERSE [[5542726367845739115]]#[[7082729395218]]
+        TRAVERSE [[425121728314878811.214604609771]]#[[7082729395218]]
             REPLACE [[6504315758]] WITH {
                 ~&6504315758&~: rmhConfiguration
                     ? ~&6504222003&~("rM Hacks Configuration (v%1)").~&197080195&~(~&7082020628281&~.rmhVersion)
@@ -503,11 +503,6 @@ AFFECT [[12653411498250454669]]
                 readonly property ~&197102514&~ rmhSettingsGesturesModel: ([~{rmhSettingsGesturesModel}~])
                 readonly property ~&197102514&~ rmhSettingsStylusModel: ([~{rmhSettingsStylusModel}~])
             }
-
-            ScrollOverlay {
-                ~&5972374&~: ~&10651086953377749338&~
-                ~&6504391364&~: rmhFlickable
-            }
         }
     END TRAVERSE
 END AFFECT
@@ -517,7 +512,7 @@ AFFECT [[12599552112012170435]]
         TRAVERSE [[7081645463424]]#[[5556919789846348618]]
             REBUILD [[16021043814775702381]]
                 LOCATE BEFORE { default }
-                INSERT { ~&6503700293&~ ~&7082020628281&~.~&14919350785992198647&~.RmHacks: ~&7083121450889&~ rmhConfiguration; }
+                INSERT { ~&6503700293&~ ~&7082020628281&~.rmHacksSettingsPage: ~&7083121450889&~ rmhConfiguration; }
             END REBUILD
         END TRAVERSE
         LOCATE AFTER ALL
@@ -528,7 +523,7 @@ AFFECT [[12599552112012170435]]
                     rmhConfiguration: ~&6504329801&~
                     ~&233721384511543&~.~&6503816592&~: ~&7083038346995&~
                     ~&2766288418351025740&~: ~&7713561876955258&~.~&2766288418351025740&~
-                    ~&2263024086287185162&~: ~&6504117156&~
+                    ~&2263024086287185162&~: { ~&16227489594565936964&~: 0 }
                 }
             }
         }
@@ -540,7 +535,7 @@ AFFECT [[12599552112012170435]]
                 ~&6504337259&~: ~&254477762679831355&~.~&233703109346403&~.~&233740920352621&~
                 ~&6504315758&~: ~&8400072892861785085&~ ? "rM Hacks" : ""
                 ~&8399601734642709923&~: ~&"6968812125651284998&~
-                ~&484431552542639914&~: ~&7713561876955258&~.~&17776274328933340866&~ === ~&7082020628281&~.~&14919350785992198647&~.RmHacks
+                ~&484431552542639914&~: ~&7713561876955258&~.~&17776274328933340866&~ === ~&7082020628281&~.rmHacksSettingsPage
                 ~&233748328658231&~: ~&6504329801&~
                 ~&7081629735527&~.~&254529418434902000&~: ~&6504329801&~
                 /* keyboard navigation:*/
@@ -548,8 +543,8 @@ AFFECT [[12599552112012170435]]
 
                 ~&495358363329399331&~: ~&7712792149454042&~()
                 function ~&7712792149454042&~() {
-                    ~&7713561876955258&~.~&17776274328933340866&~ = ~&7082020628281&~.~&14919350785992198647&~.RmHacks;
-                    ~&7713561876955258&~.~&15665743285783187873&~(~&7082020628281&~.~&14919350785992198647&~.RmHacks);
+                    ~&7713561876955258&~.~&17776274328933340866&~ = ~&7082020628281&~.rmHacksSettingsPage;
+                    ~&7713561876955258&~.~&15665743285783187873&~(~&7082020628281&~.rmHacksSettingsPage);
                 }
             } 
         }
