--- a/0.0.11-pre4/rmHacks/bookmarks.qmd
+++ b/0.0.11-pre4/rmHacks/bookmarks.qmd
@@ -143,8 +143,8 @@ AFFECT [[1224665461898798997]]
         TRAVERSE [[6502786168]]#[[15549782143769420265]]
             TRAVERSE [[233704648923420]]
                 LOCATE BEFORE ALL INSERT {
-                    ~&8399894313538586069&~: (~&6504167078&~) => ~&15793094956877902211&~.~&7713405014271992&~(~&6504167078&~, ~&14175747548438644067&~.~&10593835380864769165&~.~&233701679679437&~)
-                    onOpenBookmarkRename: (~&7083037950451&~) => ~&15793094956877902211&~.rmhShowRenameBookmarkDialog(~&7083037950451&~)
+                    ~&8399894313538586069&~: (~&6504167078&~) => ~&6504254477&~.~&7713405014271992&~(~&6504167078&~, ~&14175747548438644067&~.~&10593835380864769165&~.~&233701679679437&~)
+                    onOpenBookmarkRename: (~&7083037950451&~) => ~&6504254477&~.rmhShowRenameBookmarkDialog(~&7083037950451&~)
                 }
             END TRAVERSE
             LOCATE AFTER [[233704648923420]]
@@ -181,7 +181,7 @@ AFFECT [[1224665461898798997]]
                             ? ~&"15094524446772001204&~
                             : ""
                         ~&6504284228&~: ~&7082020628281&~.~&3842193742606557678&~
-                        ~&15640708674084664669&~: ~&7082514258149&~.~&15640708674084664669&~
+                        ~&15640708674084664669&~: ~&214625660372&~
                     }
 
                     ~&254494525842443467&~ {
@@ -199,7 +199,7 @@ AFFECT [[1224665461898798997]]
         REPLACE [[13184053911240945935]] WITH {
             ~&13184053911240945935&~: {
                 ~&5972376&~ (!!~&7712934851008712&~){
-                    ~&15793094956877902211&~.~&2905125091891814744&~();
+                    ~&6504254477&~.~&2905125091891814744&~();
                     rmhLoadBookmarks();
                 }
             }
@@ -208,16 +208,16 @@ AFFECT [[1224665461898798997]]
         TRAVERSE [[428051690305612204]][.[[7083194890448]]=[[7712934851008712]]]
             REBUILD [[1576309469129240203]]
                 LOCATE AFTER ALL
-                INSERT { ~&15793094956877902211&~.rmhRevalidateBookmarks(); }
+                INSERT { ~&6504254477&~.rmhRevalidateBookmarks(); }
             END REBUILD
         END TRAVERSE
     END TRAVERSE
 END AFFECT
 
-AFFECT [[2857280009207495592]]
-    IMPORT [[3056995282752331495]] 1.0
-    IMPORT [[10154496630581018095]] 1.0
-    IMPORT [[18218533064772175741]] 1.0
+AFFECT [[11313888899523275277]]
+    IMPORT [[7082573613689.5972775.7712892662059645]] [[180922.180921]]
+    IMPORT [[7082573613689.5972775.233730070042309]] [[180922.180921]]
+    IMPORT [[6504469795.6504031891.7712892662059645]] [[180922.180921]]
     TRAVERSE [[8397993708429497603]]#[[6504254477]]
         LOCATE BEFORE ALL
         INSERT {
@@ -225,7 +225,7 @@ AFFECT [[2857280009207495592]]
             signal openBookmarkRename(~&7083178290016&~ ~&7083037950451&~)
             property alias rmhRenameBookmarkInput: _rmhRenameBookmarkInput
             readonly property ~&197102514&~ rmhBookmarsModel: !!~&7712934851008712&~
-                ? ~&7081747777088&~.entries(~&15793094956877902211&~.rmhBookmarks)
+                ? ~&7081747777088&~.entries(~&15793094956877902211&~.~&6503936152&~.rmhBookmarks)
                     .~&197092711&~(([~&7083037950451&~, ~&6503736259&~]) => ({~&7083037950451&~, ~&6504167078&~: ~&7712934851008712&~.pageForId(~&7083037950451&~), ~&6504095402&~: ~&6503736259&~.~&6504095402&~}))
                     .~&6504290513&~((~&180970&~, ~&180971&~) => ~&180970&~.~&6504167078&~ - ~&180971&~.~&6504167078&~)
                 : []
@@ -315,7 +315,7 @@ AFFECT [[2857280009207495592]]
                         ~&7083194890448&~: rmhRenameBookmarkHeader
                         ~&233726547792244&~: ~&6504329801&~
                         function ~&8399893700003527327&~() {
-                            ~&15793094956877902211&~.rmhRenameBookmark(_rmhRenameBookmarkInput.~&7083037950451&~, _rmhRenameBookmarkInput.~&6504315758&~.~&6504329413&~())
+                            ~&15793094956877902211&~.~&6503936152&~.rmhRenameBookmark(_rmhRenameBookmarkInput.~&7083037950451&~, _rmhRenameBookmarkInput.~&6504315758&~.~&6504329413&~())
                             _rmhRenameBookmarkInput.~&233748328658231&~ = ~&214625660372&~;
                         }
                         function ~&8399894427373474444&~() {
@@ -344,33 +344,37 @@ AFFECT [[2857280009207495592]]
                     ~&5972374&~: rmhBookmarks
                     ~&233745975898428&~: ~&6504254477&~
                     ~&6504337259&~: ~&454089850271038938&~.~&6503187275&~.~&14888501028015932088&~
+                    ~&12394850801001111966&~: ~&214625660372&~
 
                     ~&8399601734642709923&~: ~&"57216753304735040&~
-                    ~&14458508249923637586&~: ~&15793094956877902211&~.rmhBookmarked
+                    ~&14458508249923637586&~: ~&15793094956877902211&~.~&6503936152&~.rmhBookmarked
                     ~&233726547792244&~: ~&6504329801&~
                     ~&233748328658231&~: ~&7082020628281&~.rmhBookmarksHack && ~&6504254477&~.~&7712989577739634&~
 
                     property ~&197088788&~ timePressed: 0
 
                     ~&254542253295368380&~: {
-                        rmhBookmarks.timePressed =         new         ~&6502586279&~().getTime() % 0x100000;
+                        rmhBookmarks.timePressed =              new              ~&6502586279&~().getTime() % 0x100000;
                     }
                     ~&8399894427451672267&~: {
-                        ~&5972376&~(((        new         ~&6502586279&~().getTime() % 0x100000) - rmhBookmarks.timePressed) > 1500) {
-                            ~&15793094956877902211&~.rmhToggleBookmark(~&15793094956877902211&~.~&3321486226208410902&~);
+                        ~&5972376&~(((             new              ~&6502586279&~().getTime() % 0x100000) - rmhBookmarks.timePressed) > 1500) {
+                            ~&15793094956877902211&~.~&6503936152&~.rmhToggleBookmark(~&15793094956877902211&~.~&6503936152&~.~&3321486226208410902&~);
                         } ~&6503784146&~ {
                             ~&6504254477&~.~&233718999756776&~(rmhBookmarks)
                         }
                     }
 
                     ~&6144132522167405889&~: ~&6502712239&~ {
+                        ~&5972374&~: rmhBookmarksGrid
+                        property bool firstVisible: ~&7082020628281&~.rmhBookmarksFirstPage && !!~&7712934851008712&~ && ~&254543134818768527&~ !== 1 && !~&15793094956877902211&~.~&6503936152&~.rmhBookmarks[~&7712934851008712&~.idForPage(0)]
+                        property bool lastVisible: ~&7082020628281&~.rmhBookmarksLastPage &&!!~&7712934851008712&~ && ~&254543134818768527&~ !== 1 && !~&15793094956877902211&~.~&6503936152&~.rmhBookmarks[~&7712934851008712&~.idForPage(~&254543134818768527&~ - 1)]
                         LayoutMirroring.~&233726547792244&~: ~&214625660372&~
                         LayoutMirroring.childrenInherit: ~&6504329801&~
 
                         ~&233724017721034&~: 6
 
                         ~&7081645463424&~ {
-                            ~&233748328658231&~: ~&7082020628281&~.rmhBookmarksFirstPage && !!~&7712934851008712&~ && ~&254543134818768527&~ !== 1 && !~&15793094956877902211&~.rmhBookmarks[~&7712934851008712&~.idForPage(0)]
+                            ~&233748328658231&~: rmhBookmarksGrid.firstVisible
                             readonly property ~&197102514&~ ~&254539508423767444&~: ({ ~&6504167078&~: 0, ~&6504095402&~: "First Page" })
                             ~&16021043814775702381&~: rmhBookmarkGridItem
                         }
@@ -381,16 +385,9 @@ AFFECT [[2857280009207495592]]
                         }
 
                         ~&7081645463424&~ {
-                            ~&233748328658231&~:  ~&7082020628281&~.rmhBookmarksLastPage &&!!~&7712934851008712&~ && ~&254543134818768527&~ !== 1 && !~&15793094956877902211&~.rmhBookmarks[~&7712934851008712&~.idForPage(~&254543134818768527&~ - 1)]
+                            ~&233748328658231&~: rmhBookmarksGrid.lastVisible
                             readonly property ~&197102514&~ ~&254539508423767444&~: ({ ~&6504167078&~: ((~&7712934851008712&~ ? ~&7712934851008712&~.~&254543134818768527&~ : 0) - 1), ~&6504095402&~: "Last Page" })
                             ~&16021043814775702381&~: rmhBookmarkGridItem
-                        }
-
-                        ~&254501108490678590&~ {
-                            ~&214646099849&~: ~&7082020628281&~.~&495727993356258788&~
-                            ~&7082729686082&~: ~&7082020628281&~.~&10749017317419834328&~
-                            ~&214622605608&~: ~&7082020628281&~.~&8399340017235344933&~
-                            ~&233748328658231&~: !~&7082020628281&~.~&800940498672108403&~
                         }
                     }
                 }
