--- a/0.0.11-pre4/rmHacks/document_battery_wifi_hack.qmd
+++ b/0.0.11-pre4/rmHacks/document_battery_wifi_hack.qmd
@@ -41,15 +41,16 @@ SLOT rmhSettingsToolbarModel
 END SLOT
 
 AFFECT [[1658694193319203921]]
+    IMPORT [[6504469795.6504031891.507403874517851955]] [[180922.180921]]
     TRAVERSE [[6502786168]]
         LOCATE AFTER ALL
         INSERT {
             readonly property ~&7083178290016&~ wifiSignalStrengthIconSource: {
-                ~&5972376&~ (!~&458393305662414579&~.~&7713152318054570&~) {
+                ~&5972376&~ (!WifiManager.~&7713152318054570&~) {
                     ~&7083121450889&~ ~&"8609872106315511513&~;
                 }
 
-                ~&197102514&~ sig = ~&458393305662414579&~.~&10447064042121733750&~;
+                ~&197102514&~ sig = WifiManager.signalStrength;
 
                 ~&5972376&~ (sig > -50) {
                     ~&7083121450889&~ ~&"1888152859768664529&~;
@@ -66,11 +67,11 @@ AFFECT [[1658694193319203921]]
     END TRAVERSE
 END AFFECT
 
-AFFECT [[2857280009207495592]]
-    IMPORT [[9024234502391964376]] 1.0
-    IMPORT [[7082546018834]] 1.0
-    IMPORT [[14663781361335589599]] 1.0
-    IMPORT [[4186407363650670104]] 1.0
+AFFECT [[11313888899523275277]]
+    IMPORT [[7082573613689.5972775.6504315758]] [[180922.180921]]
+    IMPORT [[7082546018834]] [[180922.180921]]
+    IMPORT [[14663781361335589599]] [[180922.180921]]
+    IMPORT [[7082573613689.7082699062074]] [[180922.180921]]
     TRAVERSE [[8397993708429497603]] > [[6502786168]]#[[233745975898428]]
         LOCATE BEFORE [[8398044571386570029]]
         INSERT {
@@ -83,6 +84,7 @@ AFFECT [[2857280009207495592]]
                 LayoutMirroring.childrenInherit: ~&6504329801&~
 
                 ~&233721384511543&~.~&7082507142622&~: ~&7083038346995&~.~&7082507142622&~
+                ~&233721384511543&~.~&15692798426932296956&~: ~&7082020628281&~.rmhDecreaseToolbarWidthHack ? -4 : 3
                 ~&7083177690781&~: [
                     ~&214603798730&~ {
                         ~&6504095402&~: ~&"7713689654001219&~
@@ -90,7 +92,6 @@ AFFECT [[2857280009207495592]]
                         ~&887939191986104807&~ {
                             ~&7083194890448&~: batteryWifiIcons
                             ~&233721384511543&~.~&12826966400293002612&~: ~&7083038346995&~.~&12826966400293002612&~
-                            ~&233721384511543&~.~&15692798426932296956&~: ~&7082020628281&~.rmhDecreaseToolbarWidthHack ? -10 : 3
                         }
                     },
                     ~&214603798730&~ {
@@ -100,7 +101,6 @@ AFFECT [[2857280009207495592]]
                             ~&7083194890448&~: batteryWifiIcons
                             ~&233721384511543&~.~&214640173127&~: ~&7083038346995&~.~&214640173127&~
                             ~&233721384511543&~.~&499747351624466981&~: 12
-                            ~&233721384511543&~.~&15692798426932296956&~: ~&7082020628281&~.rmhDecreaseToolbarWidthHack ? -4 : 3
                         }
                     }
                 ]
