--- a/0.0.11-pre4/rmHacks/document_clock_hack.qmd
+++ b/0.0.11-pre4/rmHacks/document_clock_hack.qmd
@@ -37,7 +37,8 @@ SLOT rmhSettingsToolbarModel
     }
 END SLOT
 
-AFFECT [[2857280009207495592]]
+AFFECT [[11313888899523275277]]
+    IMPORT [[7082546018834]] [[180922.180921]]
     TRAVERSE [[8397993708429497603]] > [[6502786168]]#[[233745975898428]]
         LOCATE BEFORE [[8398044571386570029]]
         INSERT {
@@ -53,7 +54,7 @@ AFFECT [[2857280009207495592]]
 
                 ~&214604601930&~ {
                     ~&7713147298280334&~: 10000; ~&233743626668842&~: ~&7082020628281&~.rmhDocumentClockHack; ~&7083121289162&~: ~&6504329801&~; ~&10321248157061752881&~: ~&6504329801&~
-                    ~&495358363329399331&~: ~&7083038346995&~.~&6504315758&~ =         new         ~&6502586279&~().toLocaleTimeString(~&5971598&~.~&7082897864825&~(), "HH:mm")
+                    ~&495358363329399331&~: ~&7083038346995&~.~&6504315758&~ =  new  ~&6502586279&~().toLocaleTimeString(~&5971598&~.~&7082897864825&~(), "HH:mm")
                 }
             }
         }
