--- a/0.0.11-pre4/rmHacks/hide_text_tool_hack.qmd
+++ b/0.0.11-pre4/rmHacks/hide_text_tool_hack.qmd
@@ -21,8 +21,8 @@ SLOT rmhSettingsToolbarModel
     }
 END SLOT
 
-AFFECT [[5772838938085887397]]
-    IMPORT [[7082546018834]] 1.0
+AFFECT [[817915851397553642]]
+    IMPORT [[7082546018834]] [[180922.180921]]
     TRAVERSE [[454089850271038938]]
         REBUILD [[233748328658231]]
             LOCATE AFTER ALL INSERT { && !~&7082020628281&~.rmhToolbarHideTextToolHack }
