--- a/0.0.11-pre4/rmHacks/more_stroke_sizes_hack.qmd
+++ b/0.0.11-pre4/rmHacks/more_stroke_sizes_hack.qmd
@@ -17,57 +17,7 @@ SLOT rmhSettingsToolbarModel
     }
 END SLOT
 
-AFFECT [[16860753404049821301]]
-    TRAVERSE [[254492861152542582]]
-        LOCATE BEFORE [[441564679027917167]][.[[254549061334391125]]=[[180922]]]
-        INSERT {
-            ~&441564679027917167&~ {
-                ~&7713132905884895&~: ~&"5729937688328008154&~
-                ~&254549061334391125&~: 0.5
-                ~&478322454159853472&~: ~&6504222003&~("Thinner")
-                moreStrokeSizes: ~&6504329801&~
-            }
-        }
-        LOCATE BEFORE [[441564679027917167]][.[[254549061334391125]]=[[180923]]]
-        INSERT {
-            ~&441564679027917167&~ {
-                ~&7713132905884895&~: ~&"5729937688328008154&~
-                ~&254549061334391125&~: 1.5
-                ~&478322454159853472&~: ~&6504222003&~("Medium Thin")
-                moreStrokeSizes: ~&6504329801&~
-            }
-        }
-        LOCATE AFTER [[441564679027917167]][.[[254549061334391125]]=[[180924]]]
-        INSERT {
-            ~&441564679027917167&~ {
-                ~&7713132905884895&~: ~&"4620502977728752666&~
-                ~&254549061334391125&~: 5
-                ~&478322454159853472&~: ~&6504222003&~("Thicker")
-                moreStrokeSizes: ~&6504329801&~
-            }
-            ~&441564679027917167&~ {
-                ~&7713132905884895&~: ~&"4620502977728752666&~
-                ~&254549061334391125&~: 8
-                ~&478322454159853472&~: ~&6504222003&~("Even Thicker")
-                moreStrokeSizes: ~&6504329801&~
-            }
-            ~&441564679027917167&~ {
-                ~&7713132905884895&~: ~&"4620502977728752666&~
-                ~&254549061334391125&~: 13
-                ~&478322454159853472&~: ~&6504222003&~("The Thickest")
-                moreStrokeSizes: ~&6504329801&~
-            }
-            ~&441564679027917167&~ {
-                ~&7713132905884895&~: ~&"4620502977728752666&~
-                ~&254549061334391125&~: 100
-                ~&478322454159853472&~: ~&6504222003&~("Can't Go Thicker")
-                moreStrokeSizes: ~&6504329801&~
-            }
-        }
-    END TRAVERSE
-END AFFECT
-
-AFFECT [[2857280009207495592]]
+AFFECT [[11313888899523275277]]
     TRAVERSE [[8397993708429497603]]
         REPLACE [[8168341223615502881]] WITH {
             signal ~&8168341223615502881&~(~&254549061334391125&~ : ~&197102514&~)
@@ -78,33 +28,87 @@ AFFECT [[2857280009207495592]]
     END TRAVERSE
 END AFFECT
 
-AFFECT [[2850686855228789517]]
-    IMPORT [[7082546018834]] 1.0
-    TRAVERSE [[454089850271038938]]
-        REPLACE [[8168341223615502881]] WITH {
-            signal ~&8168341223615502881&~(~&254549061334391125&~ : ~&197102514&~)
+AFFECT [[1658694193319203921]]
+    IMPORT [[6504469795.6504031891.233745975898428]] [[180922.180921]]
+    TRAVERSE [[6502786168]]
+        LOCATE BEFORE ALL
+        INSERT {
+            property ~&197102514&~ mPenThicknessModel: {
+                ~&214622607920&~ iterable = [
+                    {
+                        ~&7713132905884895&~: ~&'5729937688328008154&~,
+                        ~&254549061334391125&~: 0.5,
+                        ~&478322454159853472&~: 'Thinner',
+                        moreStrokeSizes: ~&6504329801&~,
+                    },
+                    {
+                        ~&7713132905884895&~: ~&'5729937688328008154&~,
+                        ~&254549061334391125&~: 1,
+                        ~&478322454159853472&~: 'Thin',
+                        moreStrokeSizes: ~&214625660372&~,
+                    },
+                    {
+                        ~&7713132905884895&~: ~&'4902645675094746824&~,
+                        ~&254549061334391125&~: 1.5,
+                        ~&478322454159853472&~: 'Medium Thin',
+                        moreStrokeSizes: ~&6504329801&~,
+                    },
+                    {
+                        ~&7713132905884895&~: ~&'4902645675094746824&~,
+                        ~&254549061334391125&~: 2,
+                        ~&478322454159853472&~: ~&'7081672853386&~,
+                        moreStrokeSizes: ~&214625660372&~,
+                    },
+                    {
+                        ~&7713132905884895&~: ~&'4620502977728752666&~,
+                        ~&254549061334391125&~: 3,
+                        ~&478322454159853472&~: 'Thick',
+                        moreStrokeSizes: ~&214625660372&~,
+                    },
+                    {
+                        ~&7713132905884895&~: ~&'4620502977728752666&~,
+                        ~&254549061334391125&~: 5,
+                        ~&478322454159853472&~: 'Thicker',
+                        moreStrokeSizes: ~&6504329801&~,
+                    },
+                    {
+                        ~&7713132905884895&~: ~&'4620502977728752666&~,
+                        ~&254549061334391125&~: 8,
+                        ~&478322454159853472&~: 'Even Thicker',
+                        moreStrokeSizes: ~&6504329801&~,
+                    },
+                    {
+                        ~&7713132905884895&~: ~&'4620502977728752666&~,
+                        ~&254549061334391125&~: 13,
+                        ~&478322454159853472&~: 'The Thickest',
+                        moreStrokeSizes: ~&6504329801&~,
+                    },
+                    {
+                        ~&7713132905884895&~: ~&'4620502977728752666&~,
+                        ~&254549061334391125&~: 100,
+                        ~&478322454159853472&~: 'Can\'t Go Thicker',
+                        moreStrokeSizes: ~&6504329801&~,
+                    },
+                ];
+                iterable.isValidThickness = () => ~&6504329801&~;
+                iterable.~&10393815700111895485&~ = e => iterable.~&6503816650&~(~&180995&~ => ~&180995&~.~&254549061334391125&~ === e)?.~&478322454159853472&~ ?? '';
+                iterable.iconForThickness = e => iterable.~&6503816650&~(~&180995&~ => ~&180995&~.~&254549061334391125&~ === e)?.~&7713132905884895&~ ?? '';
+                iterable.thicknessAt = e => iterable[e].~&254549061334391125&~;
+                iterable.defaultThickness = () => iterable[1];
+                ~&7083121450889&~ iterable;
+            }
         }
-        TRAVERSE [[5863306775830923820]]
-            ASSERT [[7712155293725601]][.[[214634455770]]=[[8564000837190609446]]]
-            TRAVERSE [[7712155293725601]] > [[5863306775830997749]]
-                REPLACE [[254549061334391125]] WITH { required property ~&197102514&~ ~&254549061334391125&~ }
-                LOCATE AFTER ALL
-                INSERT {
-                    required property ~&197102514&~ moreStrokeSizes
-                    ~&233748328658231&~: moreStrokeSizes ? ~&7082020628281&~.rmhMoreStrokeSizesHack : ~&6504329801&~
-                }
-            END TRAVERSE
-        END TRAVERSE
     END TRAVERSE
 END AFFECT
 
-AFFECT [[16299311781608736620]]
-    IMPORT [[7082546018834]] 1.0
-    TRAVERSE [[454089850271038938]]
-        REPLACE [[17828282154459912672]] WITH {
-            signal ~&17828282154459912672&~(~&254549061334391125&~ : ~&197102514&~)
+AFFECT [[6722609618937832156]]
+    IMPORT [[7082546018834]] [[180922.180921]]
+    TRAVERSE [[233699089663818]]
+        REMOVE [[14728011723285023849]]
+        REPLACE [[8168341223615502881]] WITH {
+            signal ~&8168341223615502881&~(~&254549061334391125&~ : ~&197102514&~)
         }
-        TRAVERSE [[14125623155555875541]]:[[6144132522167405889]] > [[5863306775830923820]] > [[7712155293725601]][.[[214634455770]]=[[8564000837190609446]]] > [[5863306775830997749]]
+        TRAVERSE [[5863306775830923820]] > [[7712155293725601]][.[[214634455770]]=[[8564000837190609446]]] > [[425121728314878811.432643201877711221]]
             REPLACE [[254549061334391125]] WITH { required property ~&197102514&~ ~&254549061334391125&~ }
             LOCATE AFTER ALL
             INSERT {
@@ -113,4 +117,30 @@ AFFECT [[16299311781608736620]]
             }
         END TRAVERSE
     END TRAVERSE
+    REBUILD [[233699089663818]]
+        LOCATE BEFORE ALL
+        REPLACE { ~&8564000837190609446&~ } WITH STREAM /~&7082020628281&~.mPenThicknessModel/
+    END REBUILD
+END AFFECT
+
+AFFECT [[11344388694920402865]]
+    IMPORT [[7082546018834]] [[180922.180921]]
+    TRAVERSE [[233699089663818]]
+        REMOVE [[14728011723285023849]]
+        REPLACE [[17828282154459912672]] WITH {
+            signal ~&17828282154459912672&~(~&254549061334391125&~ : ~&197102514&~)
+        }
+        TRAVERSE [[14125623155555875541]] > [[5863306775830923820]] > [[7712155293725601]][.[[214634455770]]=[[8564000837190609446]]] > [[425121728314878811.432643201877711221]]
+            REPLACE [[254549061334391125]] WITH { required property ~&197102514&~ ~&254549061334391125&~ }
+            LOCATE AFTER ALL
+            INSERT {
+                required property ~&197102514&~ moreStrokeSizes
+                ~&233748328658231&~: moreStrokeSizes ? ~&7082020628281&~.rmhMoreStrokeSizesHack : ~&6504329801&~
+            }
+        END TRAVERSE
+    END TRAVERSE
+    REBUILD [[233699089663818]]
+        LOCATE BEFORE ALL
+        REPLACE { ~&8564000837190609446&~ } WITH STREAM /~&7082020628281&~.mPenThicknessModel/
+    END REBUILD
 END AFFECT
