--- a/0.0.11-pre4/rmHacks/new_notebook_date_name_hack.qmd
+++ b/0.0.11-pre4/rmHacks/new_notebook_date_name_hack.qmd
@@ -25,7 +25,7 @@ AFFECT [[8850026134298937527]]
     TRAVERSE [[8397993708429497603]]
         REBUILD [[11689254259907176254]]
             LOCATE AFTER { ~&197102514&~ defaultName = }
-            INSERT { ~&7082020628281&~.rmhNewNotebookDateNameHack ? ~&233694067165438&~.uniqueVisibleName(~&7082020628281&~.newFilename()) : }
+            INSERT { ~&7082020628281&~.rmhNewNotebookDateNameHack ? ~&233694067165438&~.~&3147447785264900239&~(~&7082020628281&~.newFilename()) : }
         END REBUILD
     END TRAVERSE
 END AFFECT
