--- a/0.0.11-pre4/rmHacks/split_doc/no_orientation_switch.qmd
+++ b/0.0.11-pre4/rmHacks/split_doc/no_orientation_switch.qmd
@@ -1,22 +1,40 @@
-AFFECT [[2719823753422213979]]
+AFFECT [[11704595946725378272]]
     TRAVERSE [[454089850271038938]] > [[254480451320573660]]#[[16710723433319324941]] > [[14125623155555875541]]
-        TRAVERSE [[7712155293725601]][.[[214634455770]]~[[13256776633363353657]]] > [[8398643967516070206]]
-            LOCATE BEFORE ALL
-            REBUILD [[7082453764421]]
-                LOCATE AFTER ALL INSERT { && ~&7082020628281&~.rmhSplitMode == ~&7082020628281&~.RmhSplittingMode.~&197060196&~ }
-            END REBUILD
+        TRAVERSE [[7712155293725601]]
+            ASSERT [[8236978813210953903]][.[[7082656280847]]=`ToolbarModel.ToolGroup.Adjustment`]
+            TRAVERSE [[8398643967516070206]]
+                LOCATE BEFORE ALL
+                REBUILD [[7082453764421]]
+                    LOCATE AFTER ALL INSERT { && ~&7082020628281&~.rmhSplitMode == ~&7082020628281&~.RmhSplittingMode.~&197060196&~ }
+                END REBUILD
+            END TRAVERSE
         END TRAVERSE
-        TRAVERSE [[7712155293725601]][.[[214634455770]]~[[16660234323058120558]]] > [[8398643967516070206]]
-            LOCATE BEFORE ALL
-            INSERT {
-                ~&7082453764421&~: ~&7082020628281&~.rmhSplitMode == ~&7082020628281&~.RmhSplittingMode.~&197060196&~
-            }
+        TRAVERSE [[7712155293725601]]
+            ASSERT [[8236978813210953903]][.[[7082656280847]]=`ToolbarModel.ToolGroup.Management`]
+            TRAVERSE [[8398643967516070206]]
+                LOCATE BEFORE ALL
+                INSERT {
+                    ~&7082453764421&~: ~&7082020628281&~.rmhSplitMode == ~&7082020628281&~.RmhSplittingMode.~&197060196&~
+                }
+            END TRAVERSE
         END TRAVERSE
-        TRAVERSE [[7712155293725601]][.[[214634455770]]~[[11726738406769468119]]] > [[8398643967516070206]]
-            LOCATE BEFORE ALL
-            INSERT {
-                ~&7082453764421&~: ~&7082020628281&~.rmhSplitMode == ~&7082020628281&~.RmhSplittingMode.~&197060196&~
-            }
+        TRAVERSE [[7712155293725601]]
+            ASSERT [[8236978813210953903]][.[[7082656280847]]=`ToolbarModel.ToolGroup.Utility`]
+            TRAVERSE [[8398643967516070206]]
+                LOCATE BEFORE ALL
+                INSERT {
+                    ~&7082453764421&~: ~&7082020628281&~.rmhSplitMode == ~&7082020628281&~.RmhSplittingMode.~&197060196&~
+                }
+            END TRAVERSE
+        END TRAVERSE
+        TRAVERSE [[7712155293725601]]
+            ASSERT [[8236978813210953903]][.[[7082656280847]]=`ToolbarModel.ToolGroup.Toggle`]
+            TRAVERSE [[8398643967516070206]]
+                LOCATE BEFORE ALL
+                REBUILD [[7082453764421]]
+                    LOCATE AFTER ALL INSERT { && ~&7082020628281&~.rmhSplitMode == ~&7082020628281&~.RmhSplittingMode.~&197060196&~ }
+                END REBUILD
+            END TRAVERSE
         END TRAVERSE
     END TRAVERSE
 END AFFECT
