--- a/0.0.11-pre4/rmHacks/split_doc/toolbar.qmd
+++ b/0.0.11-pre4/rmHacks/split_doc/toolbar.qmd
@@ -1,6 +1,17 @@
 ;   Here be dragons
 
 AFFECT [[1224665461898798997]]
+    TRAVERSE ?#[[233745975898428]]
+        REPLACE [[5972374]] WITH { ~&5972374&~: _toolbar_templ }
+    END TRAVERSE
+    REBUILD [[8397993708429497603]]
+        LOCATE BEFORE ALL
+        REPLACE { ~&233745975898428&~: } WITH { ____toolbar-property____ }
+        LOCATE BEFORE ALL
+        REPLACE { ~&233745975898428&~ } WITH { ~&6504254477&~.~&233745975898428&~ }
+        LOCATE BEFORE ALL
+        REPLACE { ____toolbar-property____ } WITH { ~&233745975898428&~: }
+    END REBUILD
     TRAVERSE [[8397993708429497603]]
         LOCATE BEFORE ALL
         INSERT {
@@ -21,7 +32,7 @@ AFFECT [[1224665461898798997]]
     END TRAVERSE
 END AFFECT
 AFFECT [[2328484894988065446]]
-    IMPORT [[7011720518960720364]] 1.0
+    IMPORT [[7011720518960720364]] [[180922.180921]]
     TRAVERSE [[8397788359424131273]]
         LOCATE BEFORE ALL INSERT {
             property bool mainDocumentSelected: ~&6504329801&~
@@ -73,7 +84,7 @@ AFFECT [[1224665461898798997]]
     TRAVERSE [[8397993708429497603]] > [[6502786168]]#[[15549782143769420265]]
         TRAVERSE [[254480451320573660]] > [[233704648923420]]
             REBUILD [[2815617667007525497]]
-                LOCATE AFTER STREAM ? { ? INSERT { ~&15793094956877902211&~.requireToolbarSet(~&233745975898428&~.~&7712989577739634&~); }
+                LOCATE AFTER STREAM ? { ? INSERT { ~&6504254477&~.requireToolbarSet(~&233745975898428&~.~&7712989577739634&~); }
             END REBUILD
         END TRAVERSE
     END TRAVERSE
