--- a/0.0.11-pre4/rmHacks/toolbar_width_hack.qmd
+++ b/0.0.11-pre4/rmHacks/toolbar_width_hack.qmd
@@ -32,7 +32,7 @@ AFFECT [[1658694193319203921]]
     END TRAVERSE
 END AFFECT
 
-AFFECT [[2857280009207495592]]
+AFFECT [[11313888899523275277]]
     TRAVERSE [[8397993708429497603]]
         LOCATE BEFORE ALL
         INSERT {
@@ -114,8 +114,8 @@ AFFECT [[2857280009207495592]]
     END TRAVERSE
 END AFFECT
 
-AFFECT [[7500157198132013414]]
-    IMPORT [[7082546018834]] 1.0
+AFFECT [[10008392000802964043]]
+    IMPORT [[7082546018834]] [[180922.180921]]
     TRAVERSE [[7081645463424]] > [[254480451320573660]]#[[12920733285382795992]] > [[16948093199847579651]]
         LOCATE BEFORE ALL
         INSERT {
@@ -136,9 +136,9 @@ AFFECT [[1868076860191395426]]
     END TRAVERSE
 END AFFECT
 
-AFFECT [[2850686855228789517]]
+AFFECT [[6722609618937832156]]
     ; Depends on import in more stroke sizes.
-    TRAVERSE [[454089850271038938]] > [[6502786168]]:[[233724020048228]] > [[254501108490678590]]#[[12684643442017195032]]
+    TRAVERSE [[233699089663818]] > [[6502786168]]:[[233724020048228]] > [[254501108490678590]]#[[12684643442017195032]]
         REBUILD [[214646099849]] LOCATE BEFORE ALL INSERT { ~&7082020628281&~.rmhDecreaseToolbarWidthHack ? 20 : } END REBUILD
         REBUILD [[7082729686082]] LOCATE BEFORE ALL INSERT { ~&7082020628281&~.rmhDecreaseToolbarWidthHack ? 20 : } END REBUILD
     END TRAVERSE
